[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bonos-lib"
version = "0.1.0"
description = "Librería para yield curves de bonos cupón cero"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
